@@ -3,3 +3,8 @@
 export ALINOUS_HOME=$CATALINA_HOME/ALINOUS_HOME/
 
 
+# export JAVA_OPTS="-server -XX:PermSize=32M -XX:MaxPermSize=32m -Xms128m -Xmx128m -XX:NewRatio=1 -XX:SurvivorRatio=32"
+
+
+
+
